Small potion modal spacing fix

--- a/static/css/writerStyles.css
+++ b/static/css/writerStyles.css
@@ -669,10 +669,6 @@ input[type="range"]::-ms-thumb {
     cursor: cell;
 }
 
-.card-label {
-    padding-left: 10px;
-}
-
 .card-image {
     height: 50px;
     padding-top: 5px;
@@ -685,6 +681,10 @@ input[type="range"]::-ms-thumb {
     height: 50px;
     padding-bottom: 5px;
     box-sizing: border-box;
+}
+
+.card-upgrade ~ .card-label {
+    padding-left: 10px;
 }
 
 .upgraded .card-label {
